--- a/metropolecapital-react-ts/package.json
+++ b/metropolecapital-react-ts/package.json
@@ -4,6 +4,10 @@
   "version": "1.0.0",
   "license": "UNLICENSED",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "yarn": ">=1.22.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
